2007-01-30  sami wagiaalla  <swagiaal@redhat.com>

	* src/widgets/ftkcustomdrawingarea.c: New file.
	* src/widgets/ftkcustomatkobject.c: New file. 
	* src/widgets/ftkcustomdrawingarea.h: New file.
	* src/widgets/ftkcustomatkobject.h: New file. 
	* src/jni/com_redhat_ftk_CustomDrawingArea.c:  New file.
	* src/jni/com_redhat_ftk_CustomAtkObject.c:  New file.
	* src/java/com/redhat/ftk/CustomDrawingArea.java:  New file.
	* src/java/com/redhat/ftk/CustomAtkObject.java: New file.
	* Makefile.am: Added building rules to include CustomAtkObject.java,
	CustomDrawingArea.java, com_redhat_ftk_CustomAtkObject.c,
	com_redhat_ftk_CustomDrawingArea.c.

2006-12-11  Andrew Cagney  <cagney@redhat.com>

	* src/widgets/.cvsignore: Delete.
	* test/widget/.cvsignore: Delete.
	* test/wrapper/.cvsignore: Delete.

2006-12-08  Andrew Cagney  <cagney@redhat.com>

	* test/wrapper/Makefile-pty: Refer to frysk-imports, intead of frysk-sys.
	* test/wrapper/Makefile-vtepty: Ditto.
	* test/wrapper/PtyTest.java: Load frysk-imports, instead of frysk-sys.
	* test/wrapper/VtePtyTest.java: Ditto.

2006-10-13  Andrew Cagney  <cagney@redhat.com>

	* test/wrapper/VtePtyTest.java: Coding nit, remove NULL==.
	* src/java/com/redhat/ftk/EventViewer.java: Ditto.

2006-09-18  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Added api to change alpha values externally.
	* src/widgets/ftkeventviewer.h: Ditto.
	* src/java/com/redhat/ftk/EventViewer.java: Ditto
	* src/jni/com_redhat_ftk_EventViewer.c: Ditto.

2006-09-15  Nurdin Premji  <npremji@redhat.com>
	* src/widgets/ftkeventviewer.c: Changed alpha value of markers, for bug 3211 
	Added preliminary support for giving access to the interval slider, doesn't work yet.
	* src/widgets/ftkeventviewer.h: Added prelim support for interval slider.
	* src/java/com/redhat/ftk/Eventviewer.java: Ditto.
	* src/jni/com_redhat_ftk_EventViewer.c: Ditto.

2006-09-14  Nurdin Premji  <npremji@redhat.com>