@@ -1,3 +1,7 @@
+2007-01-31  sami wagiaalla  <swagiaal@redhat.com>
+
+	* src/widgets/ftkcustomatkobject.c: Removed debug output. 
+
 2007-01-30  sami wagiaalla  <swagiaal@redhat.com>
 
 	* src/widgets/ftkcustomdrawingarea.c: New file.
